--- a/index.html
+++ b/index.html
@@ -5,17 +5,107 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Saptarang Freshers Day Voting</title>
 <style>
-body { font-family: Arial, sans-serif; background:#111; color:#fff; margin:0; padding:20px;}
-h1 { text-align:center; font-size:3em; background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet); -webkit-background-clip: text; color: transparent; margin-bottom:30px;}
-h2 { margin-top:40px; text-align:center; font-size:2em; text-decoration: underline;}
-.grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:20px; margin-top:20px;}
-.card { background:#222; border-radius:12px; padding:10px; text-align:center; box-shadow:0 0 10px rgba(0,0,0,0.5);}
-.card img { max-width:100%; border-radius:8px;}
-.vote-btn { margin-top:10px; padding:8px 16px; border:none; border-radius:8px; cursor:pointer; background:#ff4757; color:#fff; font-weight:bold;}
-.vote-btn:disabled { background:#555; cursor:not-allowed;}
-#resultsModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); overflow:auto;}
-#resultsContent { background:#222; margin:5% auto; padding:20px; width:90%; max-width:600px; border-radius:12px;}
-.close-btn { float:right; cursor:pointer; font-size:20px;}
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 20px;
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb);
+  background-size: 400% 400%;
+  animation: gradientBG 15s ease infinite;
+}
+@keyframes gradientBG {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+h1 {
+  text-align: center;
+  font-size: 4em;
+  font-weight: bold;
+  background: linear-gradient(90deg, #ff0000, #ff9900, #ffff00, #33ff33, #33ccff, #9933ff);
+  -webkit-background-clip: text;
+  color: transparent;
+  margin-bottom: 40px;
+  animation: rainbow 5s linear infinite;
+}
+@keyframes rainbow {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+h2 {
+  margin-top: 40px;
+  text-align: center;
+  font-size: 2.2em;
+  text-decoration: underline;
+  color: #fff;
+  text-shadow: 1px 1px 5px #000;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
+  gap: 20px;
+  margin-top: 20px;
+}
+.card {
+  padding: 10px;
+  text-align: center;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+}
+.card img {
+  max-width: 100%;
+  border-radius: 12px;
+  border: 3px solid #fff;
+}
+.vote-btn {
+  margin-top: 10px;
+  padding: 10px 18px;
+  border:none;
+  border-radius:10px;
+  cursor:pointer;
+  font-weight:bold;
+  color:#fff;
+  background: linear-gradient(45deg, #ff6b6b, #feca57, #1dd1a1);
+  background-size: 300% 300%;
+  animation: btnGradient 5s ease infinite;
+  transition: transform 0.2s;
+}
+.vote-btn:hover {
+  transform: scale(1.1);
+}
+@keyframes btnGradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+.vote-btn:disabled {
+  background: #888;
+  cursor: not-allowed;
+}
+#resultsModal {
+  display:none;
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: rgba(0,0,0,0.9);
+  overflow:auto;
+}
+#resultsContent {
+  background:#fff;
+  color:#000;
+  margin:5% auto;
+  padding:20px;
+  width:90%;
+  max-width:600px;
+  border-radius:12px;
+}
+.close-btn { float:right; cursor:pointer; font-size:20px; }
 </style>
 </head>
 <body>
@@ -27,7 +117,6 @@ h2 { margin-top:40px; text-align:center; font-size:2em; text-decoration: underli
 <h2>Mrs. Fresher</h2>
 <div class="grid" id="mrsCards"></div>
 
-<!-- Results Modal -->
 <div id="resultsModal">
   <div id="resultsContent">
     <span class="close-btn" onclick="toggleResults()">&times;</span>
@@ -44,7 +133,6 @@ const males = [
   {name:"Vikram", img:"https://via.placeholder.com/200x250?text=Vikram"},
   {name:"Sahil", img:"https://via.placeholder.com/200x250?text=Sahil"}
 ];
-
 const females = [
   {name:"Priya", img:"https://via.placeholder.com/200x250?text=Priya"},
   {name:"Anjali", img:"https://via.placeholder.com/200x250?text=Anjali"},
@@ -55,22 +143,18 @@ const females = [
 let votes = JSON.parse(localStorage.getItem('votes')) || {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
 let locked = JSON.parse(localStorage.getItem('locked')) || false;
 
-function renderCards() {
-  const mrContainer = document.getElementById('mrCards');
-  mrContainer.innerHTML='';
+function renderCards(){
+  const mrContainer=document.getElementById('mrCards'); mrContainer.innerHTML='';
   males.forEach((c,i)=>{
-    const card=document.createElement('div');
-    card.className='card';
+    const card=document.createElement('div'); card.className='card';
     card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
     <button class="vote-btn" onclick="vote('males',${i})" ${locked?'disabled':''}>Vote</button>`;
     mrContainer.appendChild(card);
   });
 
-  const mrsContainer = document.getElementById('mrsCards');
-  mrsContainer.innerHTML='';
+  const mrsContainer=document.getElementById('mrsCards'); mrsContainer.innerHTML='';
   females.forEach((c,i)=>{
-    const card=document.createElement('div');
-    card.className='card';
+    const card=document.createElement('div'); card.className='card';
     card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
     <button class="vote-btn" onclick="vote('females',${i})" ${locked?'disabled':''}>Vote</button>`;
     mrsContainer.appendChild(card);
@@ -79,33 +163,19 @@ function renderCards() {
 
 function vote(group,i){
   if(!localStorage.getItem('voted')){
-    votes[group][i]++;
-    localStorage.setItem('votes', JSON.stringify(votes));
-    localStorage.setItem('voted','true');
-    alert('Vote submitted!');
+    votes[group][i]++; localStorage.setItem('votes',JSON.stringify(votes));
+    localStorage.setItem('voted','true'); alert('Vote submitted!');
     renderCards();
-  }else{
-    alert('You have already voted!');
-  }
+  } else { alert('You have already voted!'); }
 }
 
 function toggleResults(){
-  const modal=document.getElementById('resultsModal');
-  const list=document.getElementById('resultsList');
-  if(modal.style.display==='block'){
-    modal.style.display='none';
-  }else{
+  const modal=document.getElementById('resultsModal'); const list=document.getElementById('resultsList');
+  if(modal.style.display==='block'){ modal.style.display='none'; }
+  else{
     list.innerHTML='';
-    males.forEach((v,i)=>{
-      const li=document.createElement('li');
-      li.textContent=`${males[i].name} (Mr.): ${votes.males[i]} votes`;
-      list.appendChild(li);
-    });
-    females.forEach((v,i)=>{
-      const li=document.createElement('li');
-      li.textContent=`${females[i].name} (Mrs.): ${votes.females[i]} votes`;
-      list.appendChild(li);
-    });
+    males.forEach((v,i)=>{const li=document.createElement('li'); li.textContent=`${males[i].name} (Mr.): ${votes.males[i]} votes`; list.appendChild(li);});
+    females.forEach((v,i)=>{const li=document.createElement('li'); li.textContent=`${females[i].name} (Mrs.): ${votes.females[i]} votes`; list.appendChild(li);});
     modal.style.display='block';
   }
 }
@@ -113,23 +183,17 @@ function toggleResults(){
 function resetVotes(){
   if(confirm('Reset all votes?')){
     votes={males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
-    localStorage.setItem('votes', JSON.stringify(votes));
+    localStorage.setItem('votes',JSON.stringify(votes));
     localStorage.removeItem('voted');
-    renderCards();
-    toggleResults();
+    renderCards(); toggleResults();
   }
 }
 
 function toggleLock(){
   const pass=prompt('Enter admin password:');
-  if(pass==='saptarang123'){
-    locked=!locked;
-    localStorage.setItem('locked', JSON.stringify(locked));
-    alert(locked?'Voting is now LOCKED':'Voting is now UNLOCKED');
-    renderCards();
-  }else{
-    alert('Wrong password!');
-  }
+  if(pass==='saptarang123'){ locked=!locked; localStorage.setItem('locked',JSON.stringify(locked));
+    alert(locked?'Voting is now LOCKED':'Voting is now UNLOCKED'); renderCards();
+  } else { alert('Wrong password!'); }
 }
 
 document.addEventListener('keydown',(e)=>{
