--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@ h2 {
 
 <script>
 const males = [
-  {name:"Rohan", img:"https://via.placeholder.com/200x250?text=Rohan"},
-  {name:"Amit", img:"https://via.placeholder.com/200x250?text=Amit"},
-  {name:"Vikram", img:"https://via.placeholder.com/200x250?text=Vikram"},
-  {name:"Sahil", img:"https://via.placeholder.com/200x250?text=Sahil"}
+  {name:"Prabhas", img:"prabhas_latest_photos_2807170354_03.jpg"},
+  {name:"Ram Charan", img:"MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"},
+  {name:"Chiranjeevi", img:"517EDEYjsHL.jpg"},
+  {name:"Appu", img:"4b66c7797edf566ce33faf716aff65f6.jpg"}
 ];
 const females = [
-  {name:"Priya", img:"https://via.placeholder.com/200x250?text=Priya"},
-  {name:"Anjali", img:"https://via.placeholder.com/200x250?text=Anjali"},
-  {name:"Sneha", img:"https://via.placeholder.com/200x250?text=Sneha"},
-  {name:"Divya", img:"https://via.placeholder.com/200x250?text=Divya"}
+  {name:"Sai Pallavi", img:"HD-wallpaper-sai-pallavi-fidaa-love-story-naga-chaitanya-sai-pallavi-shekhar-kammula-tollywood.jpg"},
+  {name:"Kajal", img:"a4c87cf5b9871dd67ebc6df0627d000a.jpg"},
+  {name:"Sreelela", img:"Sreeleela-m-1.jpg"},
+  {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"}
 ];
 
 let votes = JSON.parse(localStorage.getItem('votes')) || {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
